--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     magrittr
+URL: https://github.com/fabiandistler/DataCleaningR
+BugReports: https://github.com/fabiandistler/DataCleaningR/issues
