--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: DataCleaningR
-Version: 0.0.0.9000
 Title: Example of Data Cleaning Package in R
-Description: This is an example package that showcases general data cleaning
-    steps in R.
-Authors@R: person(given = "Fabian",
-       family = "Distler",
-       role = c("aut", "cre"),
-       email = "fabian.distler@gmx.net")
+Version: 0.0.0.9000
+Authors@R: 
+    person("Fabian", "Distler", , "fabian.distler@gmx.net", role = c("aut", "cre"))
+Description: This is an example package that showcases general data
+    cleaning steps in R.
 License: MIT + file LICENSE
+URL: https://github.com/fabiandistler/DataCleaningR
+BugReports: https://github.com/fabiandistler/DataCleaningR/issues
+Imports: 
+    magrittr
+Suggests: 
+    testthat
+Config/fusen/version: 0.6.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Imports: 
-    magrittr
-URL: https://github.com/fabiandistler/DataCleaningR
-BugReports: https://github.com/fabiandistler/DataCleaningR/issues
