--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ BugReports: https://github.com/fabiandistler/DataCleaningR/issues
 Imports: 
     magrittr
 Suggests: 
+    spelling,
     testthat
 Config/fusen/version: 0.6.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Language: en-US
